ny savehandler fix